This file contains a high-level description of this package's evolution.
Entries are in reverse chronological order (most recent first).

VERSION         COMMENTS
-------         --------
4.1.2-beta2    2010-08-08

		Complete rewrite of the handling of character datalist
		constants. The heuristics are documented in ncgen.1.

	        Eliminate use of NC_MAX_DIMS and NC_MAX_VARS in ncdump
	        and nccopy, allocating memory as needed and reducing
	        their memory footprint.

		Add documentation for nc_inq_path() function.

	        Use hashing to speedup lookups by name for files with
		lots of dimensions and variables (thanks to Greg
		Sjaardema).
		
		Add options to nccopy to support uniform compression
		of variables in output, shuffling, and fixing
		unlimited dimensions.  Documented in nccopy.1.

4.1.2-beta1    2010-07-09

		Fix "ncdump -c" bug identifying coordinate variables in groups.

		Fix bug in libsrc/posixio.c when providing sizehint
		larger than default, which then doesn't get used
		(thanks to Harald Anlauf).

	        Fix netCDF-4 bug caused when doing enddef/redef and
	        then defining coordinate variable out of order.

	        Fixed bug in man4 directory automake file which caused
	        documentation to be rebuilt after make clean.

		Turned off HDF5 caching when parallel I/O is in use
		because of its memory use.

		Refactoring of netCDF code with dispatch layer to
		decide whether to call netCDF classic, netCDF-4, or
		opendap version of a function.

		Refactoring of netCDF-4 memory internals to reduce
		memory use and end dependance on NC_MAX_DIMS and
		NC_MAX_NAME.

                Modified constraint parser to be more compatible with
                a java version of the parser.

                Modified ncgen to utilize iterators internally; should be
                no user visible effect.

		Fixed two large-file bugs with using classic format or
		64-bit offset format and accessing multidimensional